--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,12 @@
 # 您的AccessKey ID
-accessKeyId:
+accessKeyId: example
 # 您的AccessKey Secret
-accessKeySecret:
+accessKeySecret: example
 # 您的可用区ID (可以不改)
 regionId: cn-hangzhou
-# 域名名称 例如：exmaple.com
-domainName:
+# 域名名称 例如：example.com
+domainName: example.com
 # 主机记录。例如：www，@ 等。如果要解析@.exmaple.com，主机记录要填写”@”，而不是空。
-RR:
+RR: www
 # 解析记录的类型 例如：A，CNAME 等
-recordType:
+recordType: A
