--- a/application/config.yml
+++ b/application/config.yml
@@ -4,9 +4,11 @@ accessKeyId: example
 accessKeySecret: example
 # 您的可用区ID (可以不改)
 regionId: cn-hangzhou
-# 域名名称 例如：example.com
-domainName: example.com
-# 主机记录。例如：www，@ 等。如果要解析@.exmaple.com，主机记录要填写”@”，而不是空。
-RR: www
-# 解析记录的类型 例如：A，CNAME 等
-recordType: A
+# 域名配置(可配置多个域名解析)
+domains:
+  - domainName: example.com # 域名名称 例如：exmaple.com
+    RR: "@" # 主机记录。例如：www，@ 等。如果要解析@.exmaple.com，主机记录要填写”@”，而不是空。
+    recordType: A # 解析记录的类型 例如：A，CNAME 等
+  - domainName: example.com
+    RR: www
+    recordType: A
